# gcc-func-spec-opt-plugin

./: CMakeLists.txt  README.md  func-spec-opt.cpp
test/: test.c
